    than 0744 (see #1698).
  - Fixed type database entry for "log" with second arg (fixes #1725).
  - Made topological-sort behave better when dependency target is listed
    multiple times by concatenating dependencies (fixes #1185).

- Module system
  - Reexported macros now work when the reexporting module redefines
    identifiers from the original (fixes #1757, reported by Sandra Snan).

- Runtime system
  - Sleeping primordial thread doesn't forget mutations made to
    parameters in interrupt handlers anymore. (See #1638. Fix
    contributed by Sebastien Marie)
  - A feature corresponding to the word size is available
    regardless of the word size (#1693)
  - The default maximum heap size on 64-bit platforms is now the
    theoretical maximum addressable memory size (#1675).  Use -:m
    if you would like to override this at run-time.
  - Deprecated C_(a_i_current_)milliseconds in favor of
    C_(a_i_)current_process_milliseconds to match the Scheme-level
    deprecation of current-milliseconds.
  - Officially deprecated C_pair() in favor of C_a_pair(); it has
    been deprecated for years.
  - At program cleanup, finalizers are only forced when the live
    finalizer count is non-zero
  - The symbol `srfi-87` has been added to the list of built-in
    feature identifiers.
  - Garbage collection algorithm has been changed to reduce thrashing
    when heap is almost full, by growing the heap sooner.  A new -:hf
    option was added to tweak when heap growth should occur.
  - Added `-:R' runtime option to initialize rand() state
    deterministically (should help with #1650 and benchmarking).

- Compiler
  - Avoid re-using argvector when inline rest operations are being
    used in CPS calls (#1703, thanks to Jakob L. Keuze).
  - An `emit-types-file` declaration has been added, which corresponds
    to the compiler flag of the same name (#1644, thanks to Marco Maggi
    for the suggestion).