@@ -198,6 +198,8 @@ tests/reexport-m5.scm
 tests/reexport-m6.scm
 tests/reexport-m7.scm
 tests/reexport-m8.scm
+tests/reexport-m9.scm
+tests/reexport-m10.scm
 tests/reexport-tests.scm
 tests/reexport-tests-2.scm
 tests/ec.scm
